:tada: save project

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 # Created by https://www.gitignore.io/api/node,macos,windows
 # Edit at https://www.gitignore.io/?templates=node,macos,windows
-
+dist/
 ### Gulp ###
 main.min.css
 ### macOS ###
