--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "For my webgl homework",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "camera-controls": "^1.10.6"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
