--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "dependencies": {
     "camera-controls": "^1.10.6",
     "dat.gui": "^0.7.5",
-    "ndarray": "^1.0.18",
-    "quick-normal-map": "0.0.0",
-    "zeros": "^1.0.0"
+    "seedrandom": "^2.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
